# multi_lidar_registration

./: .gitmodules  Dockerfile  README.md  extract.py  extract_images_with_timestamps.py
colcon_ws/install/kiss_icp/lib/kiss_icp/: kiss_icp_node
colcon_ws/install/kiss_icp/share/kiss_icp/: package.sh
colcon_ws/install/lidar_calibration/lib/lidar_calibration/: lidar_calibration_node  uncalibrated_node
colcon_ws/install/lidar_calibration/share/lidar_calibration/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
colcon_ws/log/: latest_build
colcon_ws/src/lidar_calibration/: CMakeLists.txt  setup.py
colcon_ws/src/lidar_calibration/lidar_calibration/: lidar_calibration_node.py  lidar_calibration_node_starter.py  uncalibrated_node.py
kiss_icp_ws/install/: local_setup.sh  setup.sh
kiss_icp_ws/install/kiss_icp/lib/kiss_icp/: kiss_icp_node
kiss_icp_ws/install/kiss_icp/share/kiss_icp/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
kiss_icp_ws/log/: latest_build
multi_lidar_ws/install/: local_setup.sh  setup.sh
multi_lidar_ws/install/multi_lidar_calibration/include/multi_lidar_calibration/: multi_lidar_calibration_icp.hpp  multi_lidar_calibration_ndt.hpp
multi_lidar_ws/install/multi_lidar_calibration/lib/multi_lidar_calibration/: multi_lidar_calibration_icp_node  multi_lidar_calibration_ndt_node
multi_lidar_ws/log/: latest_build
multi_lidar_ws/src/multi_lidar_calibration/launch/: multi_lidar_calibration_icp.launch.xml  multi_lidar_calibration_ndt.launch.xml
(+27 files in other folders)
